Fixed sidebar spacing

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -28,7 +28,7 @@ body { padding-top: 70px; }
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 51px;
+    top: 5%;
     bottom: 0;
     left: 0;
     z-index: 1000;
